Emacs for tens of seconds.  In addition, you can now customize this
option to nil to disable this confirmation completely.

---
*** Make 'image-dired-rotate-thumbnail-(left|right)' obsolete.
Instead, use 'M-x image-dired-refresh-thumb' to generate a new
thumbnail, or 'M-x image-rotate' to rotate the thumbnail without
updating the thumbnail file.

** Dired

---
*** New user option 'dired-make-directory-clickable'.
If non-nil (which is the default), hitting 'RET' or 'mouse-1' on
the directory components at the directory displayed at the start of
the buffer will take you to that directory.

** Exif

*** New function 'exif-field'.
This is a convenience function to extract the field data from
'exif-parse-file' and 'exif-parse-buffer'.

** Xwidgets

---
*** New user option 'xwidget-webkit-buffer-name-format'.
Using this option you can control how the xwidget-webkit buffers are
named.

---
*** New user option 'xwidget-webkit-cookie-file'.
Using this option you can control whether the xwidget-webkit buffers
save cookies set by web pages, and if so, in which file to save them.

+++
*** New minor mode 'xwidget-webkit-edit-mode'.
When this mode is enabled, self-inserting characters and other common
web browser shortcut keys are redefined to send themselves to the
WebKit widget.

+++
*** New minor mode 'xwidget-webkit-isearch-mode'.
This mode acts similarly to incremental search, and allows searching
the contents of a WebKit widget.  In xwidget-webkit mode, it is bound
to 'C-s' and 'C-r'.

+++
*** New command 'xwidget-webkit-browse-history'.
This command displays a buffer containing the page load history of
the current WebKit widget, and allows you to navigate it.

---
*** On X11, the WebKit inspector is now available inside xwidgets.
To access the inspector, right click on the widget and select "Inspect
Element".

---
*** "Open in New Window" in a WebKit widget's context menu now works.
The newly created buffer will be displayed via 'display-buffer', which