@@ -337,18 +337,7 @@ are also supported; unsupported long options are silently ignored."
 		 (ls-lisp-insert-directory
 		  file switches (ls-lisp-time-index switches)
 		  nil full-directory-p))
-	     (signal (car err) (cdr err)))))
-	;; Try to insert the amount of free space.
-	(save-excursion
-	  (goto-char (point-min))
-	  ;; First find the line to put it on.
-	  (when (re-search-forward "^total" nil t)
-	    (let ((available (get-free-disk-space orig-file)))
-	      (when available
-		;; Replace "total" with "total used", to avoid confusion.
-		(replace-match "total used in directory")
-		(end-of-line)
-		(insert " available " available)))))))))
+	     (signal (car err) (cdr err)))))))))
 (advice-add 'insert-directory :around #'ls-lisp--insert-directory)
 
 (defun ls-lisp-insert-directory
